Fixed dark mode script

--- a/static/style.css
+++ b/static/style.css
@@ -133,3 +133,7 @@ svg {
 #pID {
     display: none;
 }
+
+footer {
+    background-color: #13171f;
+}
